kubernwts/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        -
          image: "023764961900.dkr.ecr.us-east-2.amazonaws.com/backend"
          imagePullPolicy: Always
          name: backendcontainer
          ports:
            -
              containerPort: 8000
