kubernwts/backendserv.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backendserv
spec:
  ports:
    -
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: backend
