kubernwts/backendservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  ports:
    -
      nodePort: 30000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: backend
  type: LoadBalancer
