kubernwts/frontendserv.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-serv
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
