kubernwts/frontendservice.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: nginx
