kubernwts/backendingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
   - host: surajkube.ml
     http:
      paths:
      - backend:
          serviceName: backendserv
          servicePort: 8000
